--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,17 @@ Package: VsusP
 Title: Variable Selection using Shrinkage Priors
 Version: 1.0.0
 Authors@R: c(
-            person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
-            person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
-            )
-Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. 
-The package includes methods for determining the number of significant variables through innovative clustering techniques of posterior distributions, 
-specifically utilizing the 2-Means and Sequential 2-Means (S2M) approaches. Designed for complex datasets such as those in genomics and epidemiology, 
-VsusP helps in tackling the challenges of variable selection in the presence of high collinearity and high dimensionality. 
-The package aims to simplify the variable selection process with minimal tuning required in statistical analysis.
+    person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), 
+           comment = c(ORCID = "0000-0003-2962-2949")),
+    person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
+)
+Description: Implements Bayesian variable selection using shrinkage priors to identify significant 
+    variables in high-dimensional datasets. The package includes methods for determining the number of 
+    significant variables through innovative clustering techniques of posterior distributions, specifically 
+    utilizing the 2-Means and Sequential 2-Means (S2M) approaches. Designed for complex datasets such as 
+    those in genomics and epidemiology, VsusP helps in tackling the challenges of variable selection in 
+    the presence of high collinearity and high dimensionality. The package aims to simplify the variable 
+    selection process with minimal tuning required in statistical analysis.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
