--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-2962-2949")),
     person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
 )
-Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. 
+Description: 
+    Implements Bayesian variable selection using shrinkage priors to identify significant variables.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
