--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-2962-2949")),
     person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
 )
-Description: 
-    Implements Bayesian variable selection using shrinkage priors to identify significant variables. 
+Description: First obtain a posterior distribution of the number of significant variables by clustering the significant variables and 
+             the noise coefficients and obtaining samples from this distribution using MCMC. Then, the significant variables are estimated from the posterior median of absolute beta. 
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
