--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,9 @@ Package: VsusP
 Title: Variable Selection using Shrinkage Priors
 Version: 1.0.0
 Authors@R: c(
-    person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), 
-           comment = c(ORCID = "0000-0003-2962-2949")),
-    person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
-)
+            person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
+            person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
+            )
 Description: First obtain a posterior distribution of the number of significant variables by clustering the significant variables and 
              the noise coefficients and obtaining samples from this distribution using MCMC. Then, the significant variables are estimated from the posterior median of absolute beta. 
 License: GPL (>= 3)
