--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: c(
             person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
             person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
             )
-Description: First obtain a posterior distribution of the number of significant variables by clustering the significant variables and 
+Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. First obtain a 
+             posterior distribution of the number of significant variables by clustering the significant variables and 
              the noise coefficients and obtaining samples from this distribution using MCMC. Then, the significant variables are estimated from the posterior median of absolute beta. 
 License: GPL (>= 3)
 Encoding: UTF-8
