--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Authors@R: c(
             person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
             person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
             )
-Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. First obtain a 
-             posterior distribution of the number of significant variables by clustering the significant variables and 
-             the noise coefficients and obtaining samples from this distribution using MCMC. Then, the significant variables are estimated from the posterior median of absolute beta. 
+Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -19,3 +17,6 @@ Suggests:
     covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Maintainer: Nilson Chapagain <nilson.chapagain@gmail.com>
+URL: https://github.com/nilson01/VsusP-variable-selection-using-shrinkage-priors
+BugReports: https://github.com/nilson01/VsusP-variable-selection-using-shrinkage-priors/issues
