--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,11 @@ Imports:
     stats
 Suggests: 
     covr,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Maintainer: Nilson Chapagain <nilson.chapagain@gmail.com>
 URL: https://github.com/nilson01/VsusP-variable-selection-using-shrinkage-priors
 BugReports: https://github.com/nilson01/VsusP-variable-selection-using-shrinkage-priors/issues
+VignetteBuilder: knitr
