--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,7 +12,6 @@ on:
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
     strategy:
       fail-fast: false
       matrix:
@@ -37,12 +36,13 @@ jobs:
         run: |
           curl -sL "https://yihui.org/tinytex/install-bin-unix.sh" | sh
           echo "PATH=${HOME}/bin:${PATH}" >> $GITHUB_ENV
+
       - name: Install TinyTeX on Windows
         if: matrix.config.os == 'windows-latest'
         run: |
-          [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
-          Invoke-WebRequest -Uri "https://yihui.org/tinytex/install-bin-windows.bat" -OutFile "install-tinytex.bat"
-          Start-Process -FilePath "install-tinytex.bat" -Wait
+          choco install tinytex
+        shell: pwsh
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
@@ -52,6 +52,7 @@ jobs:
           R CMD build .
           R CMD check --as-cran *tar.gz
         shell: bash
+
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
