using xu-cheng/latex-action instead of tinytex

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,18 +31,9 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: Install TinyTeX on Unix-like systems
-        if: matrix.config.os != 'windows-latest'
-        run: |
-          curl -sL "https://yihui.org/tinytex/install-bin-unix.sh" | sh
-          echo "PATH=${HOME}/bin:${PATH}" >> $GITHUB_ENV
-
-      - name: Install TinyTeX on Windows
+      - name: Setup LaTeX
+        uses: xu-cheng/latex-action@v2
         if: matrix.config.os == 'windows-latest'
-        run: |
-          install.packages('tinytex', repos = 'http://cran.rstudio.com')
-          tinytex::install_tinytex()
-        shell: Rscript {0}
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -57,3 +48,4 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
+
