--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Suggests:
     MASS,
     knitr,
     rmarkdown,
+    tinytex,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Maintainer: Nilson Chapagain <nilson.chapagain@gmail.com>
