tinytex from pwsh

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,18 +31,19 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      # - name: Install TinyTeX on Unix-like systems
-      #   if: matrix.config.os != 'windows-latest'
-      #   run: |
-      #     curl -sL "https://yihui.org/tinytex/install-bin-unix.sh" | sh
-      #     echo "PATH=${HOME}/bin:${PATH}" >> $GITHUB_ENV
-      #
-      # - name: Install TinyTeX on Windows
-      #   if: matrix.config.os == 'windows-latest'
-      #   run: |
-      #     Rscript -e "install.packages('tinytex', repos = 'http://cran.rstudio.com')"
-      #     Rscript -e "tinytex::install_tinytex()"
-      #   shell: bash
+      - name: Install TinyTeX on Unix-like systems
+        if: matrix.config.os != 'windows-latest'
+        run: |
+          curl -sL "https://yihui.org/tinytex/install-bin-unix.sh" | sh
+          echo "PATH=${HOME}/bin:${PATH}" >> $GITHUB_ENV
+
+      - name: Install TinyTeX on Windows
+        if: matrix.config.os == 'windows-latest'
+        run: |
+          choco install r.project
+          Rscript -e "install.packages('tinytex', repos = 'https://cran.rstudio.com')"
+          Rscript -e "tinytex::install_tinytex()"
+        shell: pwsh
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
