--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,14 +37,11 @@ jobs:
           curl -sL "https://yihui.org/tinytex/install-bin-unix.sh" | sh
           echo "PATH=${HOME}/bin:${PATH}" >> $GITHUB_ENV
 
-      - name: Install TinyTeX on Windows
+      - name: Install TeX Live on Windows
         if: matrix.config.os == 'windows-latest'
-        run: |
-          Invoke-WebRequest -Uri "https://yihui.org/tinytex/TinyTeX-1.zip" -OutFile "TinyTeX-1.zip"
-          Expand-Archive -Path "TinyTeX-1.zip" -DestinationPath "$Env:ProgramFiles\TinyTeX"
-          $env:Path += ";$Env:ProgramFiles\TinyTeX\bin\win32"
-          [System.Environment]::SetEnvironmentVariable('Path', $env:Path, [System.EnvironmentVariableTarget]::Machine)
-        shell: pwsh
+        uses: teatimeguest/setup-texlive-action@v3
+        with:
+          packages: scheme-basic
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
