--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Authors@R: c(
             person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
             person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
             )
-Description: VsusP (Variable Selection using Shrinkage Priors) Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. The package includes methods for determining the number of significant variables through innovative clustering techniques of posterior distributions, specifically utilizing the 2-Means and Sequential 2-Means (S2M) approaches. The package aims to simplify the variable selection process with minimal tuning required in statistical analysis.
+Description: Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. The package includes methods for determining the number of significant variables through innovative clustering techniques of posterior distributions, specifically utilizing the 2-Means and Sequential 2-Means (S2M) approaches. The package aims to simplify the variable selection process with minimal tuning required in statistical analysis.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.3.1
 Imports: 
     bayesreg,
     stats
