--- a/VsusP.Rcheck/00_pkg_src/VsusP/DESCRIPTION
+++ b/VsusP.Rcheck/00_pkg_src/VsusP/DESCRIPTION
@@ -5,11 +5,11 @@ Authors@R: c(
             person("Nilson", "Chapagain", email = "nilson.chapagain@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2962-2949")),
             person("Debdeep", "Pati", email = "debdeep@tamu.edu", role = c("aut"))
             )
-Description: Implements Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. The package includes methods for determining the number of significant variables through innovative clustering techniques of posterior distributions, specifically utilizing the 2-Means and Sequential 2-Means (S2M) approaches. Designed for complex datasets such as those in genomics and epidemiology, VsusP helps in tackling the challenges of variable selection in the presence of high collinearity and high dimensionality. The package aims to simplify the variable selection process with minimal tuning required in statistical analysis.
+Description: Bayesian variable selection using shrinkage priors to identify significant variables in high-dimensional datasets. The package includes methods for determining the number of significant variables through innovative clustering techniques of posterior distributions, specifically utilizing the 2-Means and Sequential 2-Means (S2M) approaches. The package aims to simplify the variable selection process with minimal tuning required in statistical analysis.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.3.1
 Imports: bayesreg, stats
 Suggests: covr, MASS, knitr, rmarkdown, tinytex, testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -19,6 +19,6 @@ URL:
 BugReports: https://github.com/nilson01/VsusP-variable-selection-using-shrinkage-priors/issues
 VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2024-06-24 04:18:02 UTC; nilson
+Packaged: 2024-06-24 08:16:11 UTC; nilson
 Author: Nilson Chapagain [aut, cre] (<https://orcid.org/0000-0003-2962-2949>),
   Debdeep Pati [aut]
